update: fix visibility for datepicker

--- a/src/components/common/Form/Forms.scss
+++ b/src/components/common/Form/Forms.scss
@@ -218,3 +218,7 @@
   color: #002257;
   font-size: 16px;
 }
+
+.react-datepicker-popper {
+  z-index: 1000;
+}
